--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,5 @@
 @import 'tailwindcss';
 
 body {
-  background-color: #d2ffe3;
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #ffffff;
 }
