--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,13 @@
 
 body {
   background-color: #ffffff;
+  font-family: 'Geist Sans', sans-serif;
+}
+
+@font-face {
+  font-family: 'Geist Sans';
+  src: url('/fonts/GeistSans.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
